# readme-docstring.py

./: README.md  requirements.txt  setup.cfg  setup.py
readme_docstring/: __init__.py
tests/readme_docstring/examples/cli/: classes.sh  functions.sh
