# https://pypi.org/project/setupcfg-generator/
[metadata]
name = readme-docstring
version = 2019.03.05
url = https://github.com/looking-for-a-job/readme-docstring.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = readme docstring

[options]
install_requires = 
	click
	markdown_table
	public
	setupcfg
	setuptools
packages = 
	readme_docstring
